--- a/me.html
+++ b/me.html
@@ -60,27 +60,29 @@ Ben Cowper
 
 <p><img src="images/Ben_Cowper.jpg" alt="Ben Cowper" height="350px" width="auto">
 
-  <b>Cinematographer</b> Canon 5DmkIII (Magic Lantern), Canon C100, Canon 60D, Blackmagic, GoPro, Sony, JVC, Panasonic, Nikon, 16mm Bolex, Super 8, Glidecam, digital/analog still photography (35, medium, large format)
+<b>Bachelor of Arts in Film and Video Production</b>
 
 <br><br>
 
-  <b>Editor/Colorist</b> Adobe Premiere, After Effects, Photoshop, Speedgrade, Final Cut Pro, Avid, DaVinci Resolve
+  <b>Cinematographer, Editor, Audio Mixing</b>
+<br>
+  Canon 5DmkIII (Magic Lantern), Canon C100, Blackmagic, GoPro, 16mm Bolex, Super 8, Glidecam, still photography (digital, 35mm, medium format)
+<br>
+  Adobe Premiere, After Effects, Photoshop, Final Cut Pro, DaVinci Resolve
+<br>
+  Zoom, Tascam, ProTools, Logic, Adobe Audition 5.1 surround and stereo mixes.
 
 <br><br>
 
-  <b>Lighting Designer</b> Arri, Lowel, Kino, ETC for live show and film applications.
+  <b>Archivist</b>
+<br>
+  Digital transfer and preservation of archaic media formats (film, VHS, magnetic tape, etc.)
 
 <br><br>
 
-  <b>Sound Recordist/Mixing</b> Zoom, Tascam, ProTools, Logic, Adobe Audition 5.1 surround and stereo mixes.
-
-<br><br>
-
-  <b>Archivist</b> Digital transfer and preservation of archaic media formats (film, VHS, magnetic tape, etc.)
-
-<br><br>
-
-  <b>Live Streaming</b> Installing and live switching video, audio, and slideshows for conferences.
+  <b>Live Streaming</b>
+<br>
+  Installing and live switching video, audio, and slideshows for conferences.
 
 </p>
 
@@ -89,19 +91,26 @@ Ben Cowper
 <hr color="#af5750">
 
 <section>
-<h3>Education</h3>
+<h3>Freelance Filmmaker (2008 - )</h3>
+<br>
 <p>
-<b>Hampshire College</b> (2016)
-<br>
-Bachelor of Arts in Film and Video Production
-<br><br>
-<b>Kingswood Oxford</b> (2012)
-<br>
-High School Diploma
+Founder of freelance production company, filmed and edited over 75 projects for a wide variety of commercial and independent clients including: Yale University, Global Fibrosis Foundation, Madhatters Theatre, Cambridge University Press, Guilford Art Center, Artful Living, Shoreline Actors Collective, The Country School, Hampshire College, Mount Holyoke College, Northampton Chamber of Commerce, ServiceNet, and The Shanghai String Quartet.
 </p>
 
+<br><br>
+<b>Achievements</b>
+<p>
+  Director of Photography Darkville (Channel 101 show, screened 2 episodes at UCB Theatre 2015 & 2016)
 <br>
+  Recipient of Tom Joslin Grant at Hampshire College (2016)
+<br>
+  Recipient of Green Prize for excellence in dramatics at Kingswood Oxford (2012)
+<br>
+  Director The Great Gatsby (Short, screened at Williston-Northampton Film Festival 2010)
+</p>
+</section>
 
+<section>
 <h3>Teaching</h3>
 <p>
 <b>Guest Instructor</b> for Amherst College film studies class (2016)
@@ -118,51 +127,23 @@ Teaching Assistant Seminar Certificate (2015)
 </section>
 
 <section>
-<h3>Film and Video</h3>
-<p>
-<b>Freelance Filmmaker (2008 - )</b>
+<h3>Website, Graphic Design, Coding</h3>
 <br>
-Founder of freelance production company, filmed and edited over 75 projects for a wide variety of commercial and independent clients including: Yale University, Global Fibrosis Foundation, Madhatters Theatre, Cambridge University Press, Guilford Art Center, Artful Living, Shoreline Actors Collective, The Country School, Hampshire College, Mount Holyoke College, Northampton Chamber of Commerce, ServiceNet, and The Shanghai String Quartet.
-</p>
 <p>
-<b>Straight Ahead Pictures (2016 - )</b>
+HTML, CSS, Squarespace, Wix, Wordpress
 <br>
-Web design, marketing, and fundraising for the American Masters documentary Becoming Helen Keller. 
-</p>
-<p>
-<b>San Francisco Frozen Film Festival (2014)</b>
+Adobe Illustrator, Photoshop, InDesign
 <br>
-Festival intern in charge of promotion, fundraising, projection, selection and curation of films. 
+Python, Arduino, Mobile Apps, Apple hardware and software tech.
 </p>
-</section>
 
-<section>
-<p>
-  <b>Web/Graphic Designer</b> for multiple clients (Illustrator, InDesign, Squarespace, Wix, Wordpress)
 <br><br>
-  <b>Programming/IT</b> Python, HTML, CSS, Arduino, Mobile Apps, Apple hardware and software tech.
-<br><br>
+<h3>Various</h3>
   <b>Journalism</b> Staff writer, photographer, editor for The Climax print and web newspaper.
-<br><br>
-  <b>Radio Host (2012 - 2015)</b> Produced two college shows, skilled with production and broadcast equipment.
-<br><br>
-  <b>80 WPM Typist</b> (Transcription, Microsoft Office, Google Drive, iCloud)
-</p>
-
 <br>
-
-<h3>Awards and Achievements</h3>
-<p>
-  Director of Photography Darkville (Channel 101 show, screened 2 episodes at UCB Theatre 2015 & 2016)
-</p>
-<p>
-  Recipient of Tom Joslin Grant at Hampshire College (2016)
-</p>
-<p>
-  Recipient of Green Prize for excellence in dramatics at Kingswood Oxford (2012)
-</p>
-<p>
-  Director The Great Gatsby (Short, screened at Williston-Northampton Film Festival 2010)
+  <b>Radio Host (2012 - 2015)</b> Produced two college shows, skilled with production and broadcast equipment.
+<br>
+  <b>80 WPM Typist</b> (Transcription, Microsoft Office, Google Drive, iCloud)
 </p>
 </section>
 
