--- a/me.html
+++ b/me.html
@@ -60,91 +60,167 @@ Ben Cowper
 
 <p><img src="images/Ben_Cowper.jpg" alt="Ben Cowper" height="350px" width="auto">
 
-<b>Bachelor of Arts in Film and Video Production</b>
-
-<br><br>
-
-  <b>Cinematographer, Editor, Audio Mixing</b>
-<br>
-  Canon 5DmkIII (Magic Lantern), Canon C100, Blackmagic, GoPro, 16mm Bolex, Super 8, Glidecam, still photography (digital, 35mm, medium format)
-<br>
-  Adobe Premiere, After Effects, Photoshop, Final Cut Pro, DaVinci Resolve
-<br>
-  Zoom, Tascam, ProTools, Logic, Adobe Audition 5.1 surround and stereo mixes.
-
-<br><br>
-
-  <b>Archivist</b>
-<br>
-  Digital transfer and preservation of archaic media formats (film, VHS, magnetic tape, etc.)
-
-<br><br>
-
-  <b>Live Streaming</b>
-<br>
-  Installing and live switching video, audio, and slideshows for conferences.
-
+<p>
+In 2007 I founded a freelance video production company. Since then I have filmed and edited over 100 projects for a wide variety of commercial and independent clients including: Yale University, Cambridge University Press, Guilford Art Center, Shoreline Actors Collective, Hampshire College, Mount Holyoke College, ServiceNet, Northampton Chamber of Commerce, Beehive Sewing, and the Global Fibrosis Foundation.
 </p>
 
-<br><br><br><br><br>
+<p>
+  I received a Bachelor of Arts in Film and Video Production from Hampshire College in 2016. There I worked on various independent film productions and am proficient in the following areas:
+</p>
+
+<p>
+  <b>Cinematography</b>
+  Canon 5DmkIII (Magic Lantern), Canon C100, Blackmagic, GoPro, 16mm Bolex, Super 8, Glidecam
+</p>
+<p>
+  <b>Editing</b>
+  Adobe Premiere, After Effects, Photoshop, Final Cut Pro, DaVinci Resolve
+</p>
+<p>
+  <b>Audio Mixing</b>
+  Zoom, Tascam, ProTools, Logic, Adobe Audition 5.1 surround and stereo
+</p>
+<p>
+  <b>Photography</b>
+  Digital, 35mm, medium format
+</p>
+
+<br>
 
 <hr color="#af5750">
 
 <section>
-<h3>Freelance Filmmaker (2008 - )</h3>
-<br>
-<p>
-Founder of freelance production company, filmed and edited over 75 projects for a wide variety of commercial and independent clients including: Yale University, Global Fibrosis Foundation, Madhatters Theatre, Cambridge University Press, Guilford Art Center, Artful Living, Shoreline Actors Collective, The Country School, Hampshire College, Mount Holyoke College, Northampton Chamber of Commerce, ServiceNet, and The Shanghai String Quartet.
-</p>
+<h3>Film (2008 - )</h3>
 
-<br><br>
-<b>Achievements</b>
 <p>
-  Director of Photography Darkville (Channel 101 show, screened 2 episodes at UCB Theatre 2015 & 2016)
+  <i>The Green Child</i>
+  <br>
+  (Currently in pre-production)
+</p>
+<p>
+  <i>Becoming Helen Keller</i>
+  <br>
+  Post Production Assistant, Web Design, Marketing - PBS American Masters documentary
+</p>
+<p>
+  <i>Nona</i>
+  <br>
+  Director, Cinematographer, Editor - My thesis film at Hampshire College
+</p>
+<p>
+  <i>Darkville</i>
+  <br>
+  Director of Photography - Channel 101 show screened at UCB Theatre (2 episodes)
+</p>
+<p>
+  <i>The Shanghai String Quartet</i>
+  <br>
+  Production Assistant - Audio recording for documentary film
+</p>
+<p>
+  <i>Something Restless</i>
+  <br>
+  Technical Director - Friend's thesis film at Hampshire College
+</p>
+<p>
+  <a href="/index.html#hazardlights"><i>Hazard Lights</i></a>
+  <br>
+  Assistant Director - Friend's thesis film at Hampshire College
+</p>
+<p>
+  <i>The Games We Play</i>
+  <br>
+  Camera - Friend's thesis film at Hampshire College
+</p>
+<p>
+  <i>The Great Gatsby</i>
+  <br>
+  Director - Short film screened at Williston-Northampton Film Festival
+</p>
 <br>
-  Recipient of Tom Joslin Grant at Hampshire College (2016)
-<br>
-  Recipient of Green Prize for excellence in dramatics at Kingswood Oxford (2012)
-<br>
-  Director The Great Gatsby (Short, screened at Williston-Northampton Film Festival 2010)
+<p>
+  <i>Tom Joslin Grant</i>
+  <br>
+  Recipient for thesis film at Hampshire College
+</p>
+<p>
+  <i>Green Prize</i>
+  <br>
+  Recipient for excellence in dramatics at Kingswood Oxford
 </p>
 </section>
 
 <section>
-<h3>Teaching</h3>
+<h3>Teaching (2013 - )</h3>
+
 <p>
-<b>Guest Instructor</b> for Amherst College film studies class (2016)
-<br><br>
-<b>Assistant Instructor</b> at Creative Media Institute (2015 - 2016)
-<br><br>
-<b>Teaching Assistant</b> for 4 Hampshire College film production classes (2013 - 2016)
-<br><br>
-Teaching Assistant Seminar Certificate (2015)
-<br><br>
-<b>Instructor</b> and designer of a semester long film course at Hampshire College for 12 students (2014)
+  <i>Film Studies</i>
+  <br>
+  Guest Instructor - Amherst College (Fall 2016)
+</p>
+<p>
+  <i>Creative Media Institute</i>
+  <br>
+  Assistant Instructor - Summer film program, 2 years (2015 - 2016)
+</p>
+<p>
+  <i>Video 1, Performance & Directing, Science Fiction Film</i>
+  <br>
+  Teaching Assistant - Hampshire College, 3 semesters (2013 - 2016)
+</p>
+<p>
+  <i>Video Production Collective</i>
+  <br>
+  Co-Instructor - Designed and taught a film course at Hampshire College for 12 students (Spring 2014)
+</p>
+<p>
+  <i>Advanced Digital Video</i>
+  <br>
+  Teaching Assistant - Kingswood Oxford (Spring 2012)
+</p>
 <br>
+<p>
+  <i>Teaching Assistant Seminar Certificate</i>
+  <br>
+  Recipient of certification for a one semester course in teaching (Fall 2015)
 </p>
 </section>
 
 <section>
-<h3>Website, Graphic Design, Coding</h3>
-<br>
-<p>
-HTML, CSS, Squarespace, Wix, Wordpress
-<br>
-Adobe Illustrator, Photoshop, InDesign
-<br>
-Python, Arduino, Mobile Apps, Apple hardware and software tech.
-</p>
+<h3>Web, Graphic Design, Coding</h3>
+  <p>
+    HTML, CSS, Squarespace, Wix, Wordpress, Adobe Illustrator, Photoshop, InDesign, SketchUp, Python, Arduino, Mobile Apps, Apple hardware and software tech
+  </p>
 
-<br><br>
-<h3>Various</h3>
-  <b>Journalism</b> Staff writer, photographer, editor for The Climax print and web newspaper.
-<br>
-  <b>Radio Host (2012 - 2015)</b> Produced two college shows, skilled with production and broadcast equipment.
-<br>
-  <b>80 WPM Typist</b> (Transcription, Microsoft Office, Google Drive, iCloud)
-</p>
+<h3>Journalism</h3>
+  <p>
+    Staff writer, photographer, editor for The Climax print and web newspaper (2014 - 2015)
+  </p>
+
+<h3>Radio Host</h3>
+  <p>
+    Produced two college shows, skilled with production and broadcast equipment (2012 - 2015)
+  </p>
+
+<h3>80 WPM Typist</h3>
+  <p>
+    Transcription, Microsoft Office, Google Drive, iCloud
+  </p>
+
+<h3>Preservation and Archiving</h3>
+  <p>
+  Digital transfer and preservation of archaic media formats (film, VHS, magnetic tape, photo negatives)
+  </p>
+
+<h3>Live Streaming</h3>
+  <p>
+  Installing and live switching video, audio, and slideshows for conferences
+  </p>
+
+<h3>Lighting Design</h3>
+  <p>
+  Arri, Lowel, ETC live stage and film set experience
+  </p>  
 </section>
 
 </div>
