--- a/me.html
+++ b/me.html
@@ -118,7 +118,7 @@ In 2007 I founded a freelance video production company. Since then I have filmed
   Production Assistant - Audio recording for documentary film
 </p>
 <p>
-  <i>Something Restless</i>
+  <a href="/index.html#somethingrestless"><i>Something Restless</i></a>
   <br>
   Technical Director - Friend's thesis film at Hampshire College
 </p>
