--- a/me.html
+++ b/me.html
@@ -103,7 +103,7 @@ In 2007 I founded a freelance video production company. Since then I have filmed
   Post Production Assistant, Web Design, Marketing - PBS American Masters documentary
 </p>
 <p>
-  <i>Nona</i>
+  <a href="/index.html#nona"><i>Nona</i></a>
   <br>
   Director, Cinematographer, Editor - My thesis film at Hampshire College
 </p>
