--- a/index.html
+++ b/index.html
@@ -43,17 +43,15 @@
   width: 800px;
 }
 </style>
-
 </head>
 
 <body>
-
 <ul>
-  <li><a class="active" href="index.html">film</a></li>
   <li><a href="me.html">me</a></li>
+  <li><a class="active" href="index.html">film - personal</a></li>
+  <li><a href="professional.html">film - professional</a></li>
   <li><a href="reel.html">reel</a></li>
-  <li><a target="_blank" href="Cowper_Resume.pdf">resume</a></li>
-  <li><a href="commercial.html">commercial</a></li>
+  <li><a target="_blank" href="Ben Cowper | resume.pdf">resume</a></li>
   <li><a target="_blank" href="https://linkedin.com/in/bencowper">linkedin</a></li>
   <li><a target="_blank" href="https://vimeo.com/bencowper">vimeo</a></li>
   <li><a href="mailto:cowpervideos@gmail.com">email</a></li>
@@ -62,7 +60,6 @@
 <div style="margin-left:17%;padding:1px 16px;height:1000px;">
 
 <a name="nona"></a>
-
 <hr color="#50A8AF">
 <h2>
 	Nona (2016)
@@ -70,7 +67,6 @@
 <hr color="#50A8AF">
 
 <br>
-
 <div class="gallery" align="center">
 
     <div class="preview" align="center">
@@ -85,11 +81,9 @@
     <img onmouseover="preview.src=Nona5.src" name="Nona5" src="images/Nona5.jpg" alt="Nona 5"/>
     <img onmouseover="preview.src=Nona6.src" name="Nona6" src="images/Nona6.jpg" alt="Nona 6"/>
   </div>
-
 </div>
 
 <br>
-
 <center>
 <p>
   TRT 17m
@@ -101,7 +95,6 @@
   (For a private screening, please <a href="mailto:cowpervideos@gmail.com">contact me</a> directly)
 </p>
 </center>
-
 <br><br>
 
 <hr color="#50A8AF">
@@ -111,7 +104,6 @@
 <hr color="#50A8AF">
 
 <br>
-
 <center>
   <iframe src="https://player.vimeo.com/video/132660943?color=af5750&title=0&byline=0&portrait=0" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <br><br>
@@ -123,7 +115,6 @@
   An experimental short film.
 </p>
 </center>
-
 <br><br>
 
 <hr color="#50A8AF">
@@ -133,7 +124,6 @@
 <hr color="#50A8AF">
 
 <br>
-
 <center>
   <iframe src="https://player.vimeo.com/video/140592868?color=af5750&title=0&byline=0&portrait=0" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <br><br>
@@ -145,7 +135,6 @@
   Shot, edited, and self processed super 8 film in Paris.
 </p>
 </center>
-
 <br><br>
 
 <hr color="#50A8AF">
@@ -155,7 +144,6 @@
 <hr color="#50A8AF">
 
 <br>
-
 <center>
   <iframe src="https://player.vimeo.com/video/123589583?color=af5750&title=0&byline=0&portrait=0" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <br><br>
@@ -167,11 +155,9 @@
   A short science fiction film about a near future dependance on technology and its applications in childcare.
 </p>
 </center>
-
 <br><br>
 
 <a name="somethingrestless"></a>
-
 <hr color="#50A8AF">
 <h2>
   Something Restless (2015)
@@ -179,21 +165,19 @@
 <hr color="#50A8AF">
 
 <br>
-
 <center>
   <iframe src="https://player.vimeo.com/video/127789780?color=af5750&title=0&byline=0&portrait=0" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <br><br>
 <p>
   TRT 35:19
 <br><br>
-  ​technical director, consulting cinematographer
+  technical director, consulting cinematographer
 <br><br>
   A friend's thesis film:
 <br>
   Three vignette stories, each featuring a unique set of actors, thematically meld together into a single story of two college students’ fleeting but impactful time together before they graduate and part ways.
 </p>
 </center>
-
 <br><br>
 
 <hr color="#50A8AF">
@@ -203,19 +187,17 @@
 <hr color="#50A8AF">
 
 <br>
-
 <center>
   <iframe src="https://player.vimeo.com/video/93182932?color=af5750&title=0&byline=0&portrait=0" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <br><br>
 <p>
   TRT 3:12
 <br><br>
-  ​director, editor, cinematographer
+  director, editor, cinematographer
 <br><br>
   A cubist video piece.
 </p>
 </center>
-
 <br><br>
 
 <hr color="#50A8AF">
@@ -225,23 +207,20 @@
 <hr color="#50A8AF">
 
 <br>
-
 <center>
   <iframe src="https://player.vimeo.com/video/119695079?color=af5750&title=0&byline=0&portrait=0" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <br><br>
 <p>
   TRT 2:24
 <br><br>
-  ​director, editor, cinematographer
+  director, editor, cinematographer
 <br><br>
   An experimental short film.
 </p>
 </center>
-
 <br><br>
 
 <a name="hazardlights"></a>
-
 <hr color="#50A8AF">
 <h2>
   Hazard Lights (2014)
@@ -249,19 +228,17 @@
 <hr color="#50A8AF">
 
 <br>
-
 <center>
   <iframe src="https://player.vimeo.com/video/106734653?color=af5750&title=0&byline=0&portrait=0" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <br><br>
 <p>
   TRT 16:52
 <br><br>
-  ​assistant director
+  assistant director
 <br><br>
   A friend's thesis film.
 </p>
 </center>
-
 <br><br>
 
 </div>
