--- a/me.html
+++ b/me.html
@@ -32,17 +32,15 @@ img {
   margin: 0px 17px 0px 0px;
 }
 </style>
-
 </head>
 
 <body>
-
 <ul>
-  <li><a href="index.html">film</a></li>
   <li><a class="active" href="me.html">me</a></li>
+  <li><a href="index.html">film - personal</a></li>
+  <li><a href="professional.html">film - professional</a></li>
   <li><a href="reel.html">reel</a></li>
-  <li><a target="_blank" href="Cowper_Resume.pdf">resume</a></li>
-  <li><a href="commercial.html">commercial</a></li>
+  <li><a target="_blank" href="Ben Cowper | resume.pdf">resume</a></li>
   <li><a target="_blank" href="https://linkedin.com/in/bencowper">linkedin</a></li>
   <li><a target="_blank" href="https://vimeo.com/bencowper">vimeo</a></li>
   <li><a href="mailto:cowpervideos@gmail.com">email</a></li>
@@ -51,47 +49,49 @@ img {
 <div style="margin-left:17%;padding:1px 16px;height:1000px;">
 
 <hr color="#50A8AF">
+
 <h2>
 Ben Cowper
 </h2>
+
 <hr color="#50A8AF">
 
 <br>
-
 <p><img src="images/Ben_Cowper.jpg" alt="Ben Cowper" height="350px" width="auto">
-
 <p>
 In 2007 I founded a freelance video production company. Since then I have filmed and edited over 100 projects for a wide variety of commercial and independent clients including: Yale University, Cambridge University Press, Guilford Art Center, Shoreline Actors Collective, Hampshire College, Mount Holyoke College, ServiceNet, Northampton Chamber of Commerce, Beehive Sewing, and the Global Fibrosis Foundation.
 </p>
-
 <p>
   I received a Bachelor of Arts in Film and Video Production from Hampshire College in 2016. There I worked on various independent film productions and am proficient in the following areas:
 </p>
-
 <p>
   <b>Cinematography</b>
-  Canon 5DmkIII (Magic Lantern), Canon C100, Blackmagic, GoPro, 16mm Bolex, Super 8, Glidecam
+  Canon 5DmkIII (Magic Lantern), Canon C100, Blackmagic, GoPro, 16mm Bolex, Super 8, Glidecam operator
 </p>
 <p>
   <b>Editing</b>
   Adobe Premiere, After Effects, Photoshop, Final Cut Pro, DaVinci Resolve
 </p>
 <p>
-  <b>Audio Mixing</b>
-  Zoom, Tascam, ProTools, Logic, Adobe Audition 5.1 surround and stereo
+  <b>Audio</b>
+  Zoom, Tascam, ProTools, Logic, Adobe Audition 5.1 surround and stereo mixing
 </p>
 <p>
-  <b>Photography</b>
-  Digital, 35mm, medium format
+  <b>Lighting Design</b>
+  Arri, Lowel, ETC film set and live stage experience 
 </p>
-
-<br>
+<p>
+  <b>Contact</b>
+  <br>
+  860-221-4650
+  <br>
+  <a href="mailto:cowpervideos@gmail.com">cowpervideos@gmail.com</a>
+</p>
 
 <hr color="#af5750">
 
 <section>
-<h3>Film (2008 - )</h3>
-
+<h3>Film (2007 - )</h3>
 <p>
   <i>The Green Child</i>
   <br>
@@ -108,7 +108,7 @@ In 2007 I founded a freelance video production company. Since then I have filmed
   Director, Cinematographer, Editor - My thesis film at Hampshire College
 </p>
 <p>
-  <i>Darkville</i>
+  <a target="_blank" href="https://vimeo.com/140096300"><i>Darkville</i></a>
   <br>
   Director of Photography - Channel 101 show screened at UCB Theatre (2 episodes)
 </p>
@@ -128,7 +128,7 @@ In 2007 I founded a freelance video production company. Since then I have filmed
   Assistant Director - Friend's thesis film at Hampshire College
 </p>
 <p>
-  <i>The Games We Play</i>
+  <a target="_blank" href="https://www.youtube.com/watch?v=0iOustk_6WY"><i>The Games We Play</i></a>
   <br>
   Camera - Friend's thesis film at Hampshire College
 </p>
@@ -151,8 +151,7 @@ In 2007 I founded a freelance video production company. Since then I have filmed
 </section>
 
 <section>
-<h3>Teaching (2013 - )</h3>
-
+<h3>Teaching (2012 - )</h3>
 <p>
   <i>Film Studies</i>
   <br>
@@ -191,37 +190,32 @@ In 2007 I founded a freelance video production company. Since then I have filmed
   <p>
     HTML, CSS, Squarespace, Wix, Wordpress, Adobe Illustrator, Photoshop, InDesign, SketchUp, Python, Arduino, Mobile Apps, Apple hardware and software tech
   </p>
-
+<h3>Photography</h3>
+  <p>
+  Digital, 35mm, medium format
+  </p>
 <h3>Journalism</h3>
   <p>
     Staff writer, photographer, editor for The Climax print and web newspaper (2014 - 2015)
   </p>
-
 <h3>Radio Host</h3>
   <p>
     Produced two college shows, skilled with production and broadcast equipment (2012 - 2015)
   </p>
-
 <h3>80 WPM Typist</h3>
   <p>
     Transcription, Microsoft Office, Google Drive, iCloud
   </p>
-
 <h3>Preservation and Archiving</h3>
   <p>
   Digital transfer and preservation of archaic media formats (film, VHS, magnetic tape, photo negatives)
   </p>
-
 <h3>Live Streaming</h3>
   <p>
   Installing and live switching video, audio, and slideshows for conferences
   </p>
-
-<h3>Lighting Design</h3>
-  <p>
-  Arri, Lowel, ETC live stage and film set experience
-  </p>  
 </section>
+<br><br>
 
 </div>
 </body>
