--- a/professional.html
+++ b/professional.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Ben Cowper | commercial</title>
+<title>Ben Cowper | professional</title>
 <link rel="stylesheet" href="styles.css">
 <link rel="author" href="humans.txt" />
 
@@ -25,17 +25,15 @@
 <meta name="msapplication-TileColor" content="#FFFFFF">
 <meta name="msapplication-TileImage" content="icons/favicon-144.png">
 <meta name="msapplication-config" content="icons/browserconfig.xml">
-
 </head>
 
 <body>
-
 <ul>
-  <li><a href="index.html">film</a></li>
   <li><a href="me.html">me</a></li>
+  <li><a href="index.html">film - personal</a></li>
+  <li><a class="active" href="professional.html">film - professional</a></li>
   <li><a href="reel.html">reel</a></li>
-  <li><a target="_blank" href="Cowper_Resume.pdf">resume</a></li>
-  <li><a class="active" href="commercial.html">commercial</a></li>
+  <li><a target="_blank" href="Ben Cowper | resume.pdf">resume</a></li>
   <li><a target="_blank" href="https://linkedin.com/in/bencowper">linkedin</a></li>
   <li><a target="_blank" href="https://vimeo.com/bencowper">vimeo</a></li>
   <li><a href="mailto:cowpervideos@gmail.com">email</a></li>
@@ -50,7 +48,6 @@
 <hr color="#50A8AF">
 
 <br>
-
 <center>
   <iframe width="800" height="450" src="https://www.youtube.com/embed/hZtUYXg1Vdk?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
 <br><br>
@@ -62,7 +59,6 @@
   A short interview with Ken Burns for Hampshire College.
 </p>
 </center>
-
 <br><br>
 
 <hr color="#50A8AF">
@@ -72,7 +68,6 @@
 <hr color="#50A8AF">
 
 <br>
-
 <center>
   <iframe src="https://player.vimeo.com/video/161136869?color=af5750&title=0&byline=0&portrait=0" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <br><br>
@@ -88,7 +83,6 @@
   <a target="_blank" href="http://www.dawn.com/news/1220513/how-did-an-urdu-greeting-reach-the-edge-of-our-solar-system">News article featured in DAWN</a>
 </p>
 </center>
-
 <br><br>
 
 <hr color="#50A8AF">
@@ -98,7 +92,6 @@
 <hr color="#50A8AF">
 
 <br>
-
 <center>
   <iframe src="https://player.vimeo.com/video/163777798?color=af5750&title=0&byline=0&portrait=0" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <br><br>
@@ -110,7 +103,6 @@
   A documentation of a friend's art installation from creation to completion. The film was projected during his gallery opening.
 </p>
 </center>
-
 <br><br>
 
 <hr color="#50A8AF">
@@ -120,7 +112,6 @@
 <hr color="#50A8AF">
 
 <br>
-
 <center>
   <iframe src="https://player.vimeo.com/video/141407152?color=af5750&title=0&byline=0&portrait=0" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <br><br>
@@ -131,7 +122,6 @@
 <br><br>
   <a target="_blank" href="http://www.shelbyhead.com/">Shelby Head's Website</a></p>
 </center>
-
 <br><br>
 
 <hr color="#50A8AF">
@@ -141,7 +131,6 @@
 <hr color="#50A8AF">
 
 <br>
-
 <center>
   <iframe width="800" height="450" src="https://www.youtube.com/embed/zZ6LzERAsxE?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
 <br><br>
@@ -153,7 +142,6 @@
   A short interview with Salman Hameed for Hampshire College.
 </p>
 </center>
-
 <br><br>
 
 <hr color="#50A8AF">
@@ -163,7 +151,6 @@
 <hr color="#50A8AF">
 
 <br>
-
 <center>
   <img src="images/NHCC.jpg" alt="Northampton Chamber of Commerce" height="auto" width="800px">
 <br><br>
@@ -173,7 +160,6 @@
   Various promotional videos for the Northampton Chamber of Commerce.
 </p>
 </center>
-
 <br><br>
 
 <hr color="#50A8AF">
@@ -183,7 +169,6 @@
 <hr color="#50A8AF">
 
 <br>
-
 <center>
   <iframe src="https://player.vimeo.com/video/100529655?color=af5750&title=0&byline=0&portrait=0" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <br><br>
@@ -195,7 +180,6 @@
   A short promotional video for the Frozen Film Festival.
 </p>
 </center>
-
 <br><br>
 
 <hr color="#50A8AF">
@@ -205,7 +189,6 @@
 <hr color="#50A8AF">
 
 <br>
-
 <center>
   <iframe src="https://player.vimeo.com/video/131499249?color=af5750&title=0&byline=0&portrait=0" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <br><br>
@@ -217,7 +200,6 @@
   Animated logo for local wedding film company.
 </p>
 </center>
-
 <br><br>
 
 <hr color="#50A8AF">
@@ -227,7 +209,6 @@
 <hr color="#50A8AF">
 
 <br>
-
 <center>
   <iframe width="800" height="450" src="https://www.youtube.com/embed/MVdcUx2cxsQ?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
 <br><br>
@@ -239,7 +220,6 @@
   Various short videos for the Global Fibrosis Foundation annual dinner.
 </p>
 </center>
-
 <br><br>
 
 <hr color="#50A8AF">
@@ -249,7 +229,6 @@
 <hr color="#50A8AF">
 
 <br>
-
 <center>
   <img src="images/CambridgeU.jpg" alt="Cambridge University Press" height="auto" width="600px">
 <br><br>
@@ -261,7 +240,6 @@
   <a target="_blank" href="https://www.amazon.com/Readers-Brain-Neuroscience-Better-Writer/dp/1107496500/">Promotional video for behavioral science book.</a>
 </p>
 </center>
-
 <br><br>
 
 </div>
