--- a/reel.html
+++ b/reel.html
@@ -25,17 +25,15 @@
 <meta name="msapplication-TileColor" content="#FFFFFF">
 <meta name="msapplication-TileImage" content="icons/favicon-144.png">
 <meta name="msapplication-config" content="icons/browserconfig.xml">
-
 </head>
 
 <body>
-
 <ul>
-  <li><a href="index.html">film</a></li>
   <li><a href="me.html">me</a></li>
+  <li><a href="index.html">film - personal</a></li>
+  <li><a href="professional.html">film - professional</a></li>
   <li><a class="active" href="reel.html">reel</a></li>
-  <li><a target="_blank" href="Cowper_Resume.pdf">resume</a></li>
-  <li><a href="commercial.html">commercial</a></li>
+  <li><a target="_blank" href="Ben Cowper | resume.pdf">resume</a></li>
   <li><a target="_blank" href="https://linkedin.com/in/bencowper">linkedin</a></li>
   <li><a target="_blank" href="https://vimeo.com/bencowper">vimeo</a></li>
   <li><a href="mailto:cowpervideos@gmail.com">email</a></li>
@@ -58,6 +56,7 @@
 	All clips photographed and edited by Ben Cowper
 </p>
 </center>
+<br><br>
 
 </div>
 </body>
