--- a/professional.html
+++ b/professional.html
@@ -146,6 +146,26 @@
 
 <hr color="#50A8AF">
 <h2>
+  Path of Darkness Promo (2014)
+</h2>
+<hr color="#50A8AF">
+
+<br>
+<center>
+  <iframe src="https://player.vimeo.com/video/111631355?color=af5750&title=0&byline=0&portrait=0" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<br><br>
+<p>
+  TRT 1m
+<br><br>
+  cinematographer, editor
+<br><br>
+  A short promotional video for a friend's "film noir" stage production.
+</p>
+</center>
+<br><br>
+
+<hr color="#50A8AF">
+<h2>
   Northampton Chamber of Commerce (2015)
 </h2>
 <hr color="#50A8AF">
