--- a/index.html
+++ b/index.html
@@ -134,8 +134,9 @@
 <hr color="#50A8AF">
 
 <br>
-<center>
+<div class="video-container" align="center">
   <iframe src="https://player.vimeo.com/video/132660943?color=af5750&title=0&byline=0&portrait=0" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+</div>
 <br><br>
 <p>
   TRT 3:14
