changed to divs

--- a/professional.html
+++ b/professional.html
@@ -46,9 +46,8 @@
   Ken Burns Interview (2015)
 </h2>
 <hr color="#50A8AF">
-
 <br>
-<center>
+<div align="center">
   <iframe width="800" height="450" src="https://www.youtube.com/embed/hZtUYXg1Vdk?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
 <br><br>
 <p>
@@ -58,7 +57,8 @@
 <br><br>
   A short interview with Ken Burns for Hampshire College.
 </p>
-</center>
+</div>
+
 <br><br>
 
 <hr color="#50A8AF">
@@ -66,9 +66,8 @@
   Science ka Adda (ongoing series, 2015 - )
 </h2>
 <hr color="#50A8AF">
-
 <br>
-<center>
+<div align="center">
   <iframe src="https://player.vimeo.com/video/161136869?color=af5750&title=0&byline=0&portrait=0" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <br><br>
 <p>
@@ -82,7 +81,8 @@
 <br><br>
   <a target="_blank" href="http://www.dawn.com/news/1220513/how-did-an-urdu-greeting-reach-the-edge-of-our-solar-system">News article featured in DAWN</a>
 </p>
-</center>
+</div>
+
 <br><br>
 
 <hr color="#50A8AF">
@@ -90,9 +90,8 @@
   Fall of Kalea (2016)
 </h2>
 <hr color="#50A8AF">
-
 <br>
-<center>
+<div align="center">
   <iframe src="https://player.vimeo.com/video/163777798?color=af5750&title=0&byline=0&portrait=0" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <br><br>
 <p>
@@ -102,7 +101,8 @@
 <br><br>
   A documentation of a friend's art installation from creation to completion. The film was projected during his gallery opening.
 </p>
-</center>
+</div>
+
 <br><br>
 
 <hr color="#50A8AF">
@@ -110,9 +110,8 @@
   Shelby Head Art Video (2015)
 </h2>
 <hr color="#50A8AF">
-
 <br>
-<center>
+<div align="center">
   <iframe src="https://player.vimeo.com/video/141407152?color=af5750&title=0&byline=0&portrait=0" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <br><br>
 <p>
@@ -121,7 +120,8 @@
   cinematographer, editor
 <br><br>
   <a target="_blank" href="http://www.shelbyhead.com/">Shelby Head's Website</a></p>
-</center>
+</div>
+
 <br><br>
 
 <hr color="#50A8AF">
@@ -129,9 +129,8 @@
   Salman Hameed Profile (2015)
 </h2>
 <hr color="#50A8AF">
-
 <br>
-<center>
+<div align="center">
   <iframe width="800" height="450" src="https://www.youtube.com/embed/zZ6LzERAsxE?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
 <br><br>
 <p>
@@ -141,7 +140,8 @@
 <br><br>
   A short interview with Salman Hameed for Hampshire College.
 </p>
-</center>
+</div>
+
 <br><br>
 
 <hr color="#50A8AF">
@@ -149,9 +149,8 @@
   Path of Darkness Promo (2014)
 </h2>
 <hr color="#50A8AF">
-
 <br>
-<center>
+<div align="center">
   <iframe src="https://player.vimeo.com/video/111631355?color=af5750&title=0&byline=0&portrait=0" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <br><br>
 <p>
@@ -161,7 +160,8 @@
 <br><br>
   A short promotional video for a friend's "film noir" stage production.
 </p>
-</center>
+</div>
+
 <br><br>
 
 <hr color="#50A8AF">
@@ -169,9 +169,8 @@
   Northampton Chamber of Commerce (2015)
 </h2>
 <hr color="#50A8AF">
-
 <br>
-<center>
+<div align="center">
   <img src="images/NHCC.jpg" alt="Northampton Chamber of Commerce" height="auto" width="800px">
 <br><br>
 <p>
@@ -179,7 +178,8 @@
 <br><br>
   Various promotional videos for the Northampton Chamber of Commerce.
 </p>
-</center>
+</div>
+
 <br><br>
 
 <hr color="#50A8AF">
@@ -187,9 +187,8 @@
   San Francisco Frozen Film Festival Promo (2014)
 </h2>
 <hr color="#50A8AF">
-
 <br>
-<center>
+<div align="center">
   <iframe src="https://player.vimeo.com/video/100529655?color=af5750&title=0&byline=0&portrait=0" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <br><br>
 <p>
@@ -199,7 +198,8 @@
 <br><br>
   A short promotional video for the Frozen Film Festival.
 </p>
-</center>
+</div>
+
 <br><br>
 
 <hr color="#50A8AF">
@@ -207,9 +207,8 @@
   Summer Wind Animated Logo (2012)
 </h2>
 <hr color="#50A8AF">
-
 <br>
-<center>
+<div align="center">
   <iframe src="https://player.vimeo.com/video/131499249?color=af5750&title=0&byline=0&portrait=0" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <br><br>
 <p>
@@ -219,7 +218,8 @@
 <br><br>
   Animated logo for local wedding film company.
 </p>
-</center>
+</div>
+
 <br><br>
 
 <hr color="#50A8AF">
@@ -227,9 +227,8 @@
   Global Fibrosis Foundation (ongoing, 2011 - )
 </h2>
 <hr color="#50A8AF">
-
 <br>
-<center>
+<div align="center">
   <iframe width="800" height="450" src="https://www.youtube.com/embed/MVdcUx2cxsQ?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
 <br><br>
 <p>
@@ -239,27 +238,8 @@
 <br><br>
   Various short videos for the Global Fibrosis Foundation annual dinner.
 </p>
-</center>
-<br><br>
+</div>
 
-<hr color="#50A8AF">
-<h2>
-  Cambridge University Press (2015)
-</h2>
-<hr color="#50A8AF">
-
-<br>
-<center>
-  <img src="images/CambridgeU.jpg" alt="Cambridge University Press" height="auto" width="600px">
-<br><br>
-<p>
-  TRT 1m
-<br><br>
-  ​editor
-<br><br>
-  <a target="_blank" href="https://www.amazon.com/Readers-Brain-Neuroscience-Better-Writer/dp/1107496500/">Promotional video for behavioral science book.</a>
-</p>
-</center>
 <br><br>
 
 </div>
