--- a/reel.html
+++ b/reel.html
@@ -46,16 +46,15 @@
 	DP + Editing Reel (2016)
 </h2>
 <hr color="#50A8AF">
-
 <br>
-
-<center>
+<div align="center">
 	<iframe src="https://player.vimeo.com/video/87645149?color=af5750&title=0&byline=0&portrait=0" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <br><br>
 <p>
 	All clips photographed and edited by Ben Cowper
 </p>
-</center>
+</div>
+
 <br><br>
 
 </div>
