--- a/me.html
+++ b/me.html
@@ -81,9 +81,9 @@ In 2007 I founded a freelance video production company. Since then I have filmed
 <p>
   <b>Contact</b>
   <br>
-  860-221-4650
-  <br>
   <a href="mailto:cowpervideos@gmail.com">cowpervideos@gmail.com</a>
+  <br>
+  (phone in <a href="http://bencowper.tk/Ben%20Cowper%20|%20resume.pdf">resume</a>)
 </p>
 
 <hr color="#af5750">
