--- a/photo.html
+++ b/photo.html
@@ -60,79 +60,36 @@
 
 <div style="margin-left:17%;padding:1px 16px;height:1000px;">
 
+<a name="photography"></a>
 <hr color="#50A8AF">
 <h2>
-	Commercial Photography
+  Photography
 </h2>
 <hr color="#50A8AF">
 <br>
 <div class="gallery" align="center">
     <div class="preview" align="center">
-    <img name="preview" src="photgraphy/C_Cowper_Sunglasses.jpg" alt="Suglasses"/>
+    <img name="preview" src="images/Sunglasses.jpg" alt="Sunglasses"/>
   </div>
   <div class="thumbnails">
-    <img onmouseover="preview.src=C_Cowper_Sunglasses.src" name="Sunglasses" src="photography/C_Cowper_Sunglasses.jpg" alt="Sunglasses"/>
-    <img onmouseover="preview.src=C_Cowper_Arm_Door.src" name="The Climax Cover" src="photography/C_Cowper_Arm_Door.jpg" alt="The Climax Cover"/>
-    <img onmouseover="preview.src=C_Cowper_Red_Barn.src" name="Red Barn Event" src="photography/C_Cowper_Red_Barn.JPG" alt="Red Barn Event"/>
-    <img onmouseover="preview.src=C_Cowper_Art_Fair.src" name="Guilford Art Fair 2013" src="photography/C_Cowper_Art_Fair.jpg" alt="Guilford Art Fair 2013"/>
-    <img onmouseover="preview.src=Nona5.src" name="Nona5" src="images/Nona5.jpg" alt="Nona 5"/>
-    <img onmouseover="preview.src=Nona6.src" name="Nona6" src="images/Nona6.jpg" alt="Nona 6"/>
+    <img onmouseover="preview.src=Sunglasses.src" name="Sunglasses" src="images/Sunglasses.jpg" alt="Sunglasses"/>
+    <img onmouseover="preview.src=Door.src" name="Door" src="images/Door.jpg" alt="The Climax Cover"/>
+    <img onmouseover="preview.src=RedBarn.src" name="RedBarn" src="images/RedBarn.jpg" alt="Red Barn Event"/>
+    <img onmouseover="preview.src=ArtFair.src" name="ArtFair" src="images/ArtFair.jpg" alt="Guilford Art Fair 2013"/>
+    <img onmouseover="preview.src=Lake.src" name="Lake" src="images/Lake.jpg" alt="Lake Reflections"/>
+    <img onmouseover="preview.src=Light.src" name="Light" src="images/Light.jpg" alt="Long Exposure"/>
+    <img onmouseover="preview.src=Mannequin.src" name="Mannequin" src="images/Mannequin.jpg" alt="Mannequin Reflections"/>
+    <img onmouseover="preview.src=Moon.src" name="Moon" src="images/Moon.jpg" alt="Moon"/>
+    <img onmouseover="preview.src=Mountain.src" name="Mountain" src="images/Mountain.jpg" alt="Mountain"/>
+    <img onmouseover="preview.src=Pools.src" name="Pools" src="images/Pools.jpg" alt="Pools"/>
+    <img onmouseover="preview.src=SanFrancisco.src" name="SanFrancisco" src="images/SanFrancisco.jpg" alt="San Francisco"/>
+    <img onmouseover="preview.src=Snowflake.src" name="Snowflake" src="images/Snowflake.jpg" alt="Snowflakes"/>
+    <img onmouseover="preview.src=Squam.src" name="Squam" src="images/Squam.jpg" alt="Squam Lake"/>
+    <img onmouseover="preview.src=Yellowstone.src" name="Yellowstone" src="images/Yellowstone.jpg" alt="Yellowstone"/>
   </div>
 <br>
 <p>
-  Lorem ipsum dolor...
-</p>
-</div>
-
-<br><br>
-
-<hr color="#50A8AF">
-<h2>
-  Landscape Photography
-</h2>
-<hr color="#50A8AF">
-<br>
-<div class="gallery" align="center">
-    <div class="preview" align="center">
-    <img name="preview" src="images/Nona1.jpg" alt="J+S Vision"/>
-  </div>
-  <div class="thumbnails">
-    <img onmouseover="preview.src=Nona1.src" name="J+S Vision " src="images/Nona1.jpg" alt="J+S Vision"/>
-    <img onmouseover="preview.src=Nona2.src" name="Nona2" src="images/Nona2.jpg" alt="Nona 2"/>
-    <img onmouseover="preview.src=Nona3.src" name="Nona3" src="images/Nona3.jpg" alt="Nona 3"/>
-    <img onmouseover="preview.src=Nona4.src" name="Nona4" src="images/Nona4.jpg" alt="Nona 4"/>
-    <img onmouseover="preview.src=Nona5.src" name="Nona5" src="images/Nona5.jpg" alt="Nona 5"/>
-    <img onmouseover="preview.src=Nona6.src" name="Nona6" src="images/Nona6.jpg" alt="Nona 6"/>
-  </div>
-<br>
-<p>
-  Lorem ipsum dolor...
-</p>
-</div>
-
-<br><br>
-
-<hr color="#50A8AF">
-<h2>
-  Art Photography
-</h2>
-<hr color="#50A8AF">
-<br>
-<div class="gallery" align="center">
-    <div class="preview" align="center">
-    <img name="preview" src="images/Nona1.jpg" alt="Nona"/>
-  </div>
-  <div class="thumbnails">
-    <img onmouseover="preview.src=Nona1.src" name="Nona1" src="images/Nona1.jpg" alt="Nona 1"/>
-    <img onmouseover="preview.src=Nona2.src" name="Nona2" src="images/Nona2.jpg" alt="Nona 2"/>
-    <img onmouseover="preview.src=Nona3.src" name="Nona3" src="images/Nona3.jpg" alt="Nona 3"/>
-    <img onmouseover="preview.src=Nona4.src" name="Nona4" src="images/Nona4.jpg" alt="Nona 4"/>
-    <img onmouseover="preview.src=Nona5.src" name="Nona5" src="images/Nona5.jpg" alt="Nona 5"/>
-    <img onmouseover="preview.src=Nona6.src" name="Nona6" src="images/Nona6.jpg" alt="Nona 6"/>
-  </div>
-<br>
-<p>
-  Lorem ipsum dolor...
+  Lorem Ipsum Dolor...
 </p>
 </div>
 
