--- a/photo.html
+++ b/photo.html
@@ -67,11 +67,7 @@
 </h2>
 <hr color="#50A8AF">
 <br>
-<div class="gallery" align="center">
-    <div class="preview" align="center">
-    <img name="preview" src="images/Sunglasses.jpg" alt="Sunglasses"/>
-  </div>
-  <div class="thumbnails">
+  <div class="thumbnails" align="center">
     <img onmouseover="preview.src=Sunglasses.src" name="Sunglasses" src="images/Sunglasses.jpg" alt="Sunglasses"/>
     <img onmouseover="preview.src=Door.src" name="Door" src="images/Door.jpg" alt="The Climax Cover"/>
     <img onmouseover="preview.src=RedBarn.src" name="RedBarn" src="images/RedBarn.jpg" alt="Red Barn Event"/>
@@ -88,6 +84,10 @@
     <img onmouseover="preview.src=Yellowstone.src" name="Yellowstone" src="images/Yellowstone.jpg" alt="Yellowstone"/>
   </div>
 <br>
+<div class="gallery" align="center">
+    <div class="preview" align="center">
+    <img name="preview" src="images/Sunglasses.jpg" alt="Sunglasses"/>
+  </div>
 <p>
   Lorem Ipsum Dolor...
 </p>
