added nav bar links

--- a/photo.html
+++ b/photo.html
@@ -66,7 +66,6 @@
   Photography
 </h2>
 <hr color="#50A8AF">
-<br>
   <div class="thumbnails" align="center">
     <img onmouseover="preview.src=Sunglasses.src" name="Sunglasses" src="images/Sunglasses.jpg" alt="Sunglasses"/>
     <img onmouseover="preview.src=Door.src" name="Door" src="images/Door.jpg" alt="The Climax Cover"/>
@@ -89,7 +88,7 @@
     <img name="preview" src="images/Sunglasses.jpg" alt="Sunglasses"/>
   </div>
 <p>
-  Lorem Ipsum Dolor...
+  All photographs by Ben Cowper
 </p>
 </div>
 
