--- a/professional.html
+++ b/professional.html
@@ -33,6 +33,7 @@
   <li><a href="index.html">film - personal</a></li>
   <li><a class="active" href="professional.html">film - professional</a></li>
   <li><a href="reel.html">reel</a></li>
+  <li><a href="photo.html">photography</a></li>
   <li><a target="_blank" href="Ben Cowper | resume.pdf">resume</a></li>
   <li><a target="_blank" href="https://linkedin.com/in/bencowper">linkedin</a></li>
   <li><a target="_blank" href="https://vimeo.com/bencowper">vimeo</a></li>
