added photo link

--- a/me.html
+++ b/me.html
@@ -189,7 +189,7 @@ In 2007 I founded a freelance video production company. Since then I have filmed
   <p>
     HTML, CSS, Squarespace, Wix, Wordpress, Adobe Illustrator, Photoshop, InDesign, SketchUp, Python, Arduino, Mobile Apps, Apple hardware and software tech
   </p>
-<h3>Photography</h3>
+<a href="/photo.html"><h3>Photography</h3></a>
   <p>
   Digital, 35mm, medium format
   </p>
