--- a/photo.html
+++ b/photo.html
@@ -83,6 +83,8 @@
     <img name="preview" src="images/Sunglasses.jpg" alt="Sunglasses"/>
   </div>
 <p>
+  Commercial and Art Photography
+<br><br>
   All photographs by Ben Cowper
 </p>
 </div>
