--- a/me.html
+++ b/me.html
@@ -58,7 +58,7 @@ Ben Cowper
 <br>
 <p><img src="images/Ben_Cowper.jpg" alt="Ben Cowper" height="350px" width="auto">
 <p>
-In 2007 I founded a freelance video production company. Since then I have filmed and edited over 100 projects for a wide variety of commercial and independent clients including: Yale University, Cambridge University Press, Guilford Art Center, Shoreline Actors Collective, Hampshire College, Mount Holyoke College, ServiceNet, Northampton Chamber of Commerce, Beehive Sewing, and the Global Fibrosis Foundation.
+I began doing freelance video production in 2007. Since then I have filmed and edited over 100 projects for a wide variety of commercial and independent clients including: Yale University, Hampshire College, Mount Holyoke College, Cambridge University Press, Guilford Art Center, Shoreline Actors Collective, ServiceNet, Northampton Chamber of Commerce, Beehive Sewing, and the Global Fibrosis Foundation.
 </p>
 <p>
   I received a Bachelor of Arts in Film and Video Production from Hampshire College in 2016. There I worked on various independent film productions and am proficient in the following areas:
@@ -92,9 +92,9 @@ In 2007 I founded a freelance video production company. Since then I have filmed
 <section>
 <h3>Film (2007 - )</h3>
 <p>
-  <i>The Green Child</i>
+  <i>TBA</i>
   <br>
-  (Currently in pre-production)
+  (Pre-production for feature film)
 </p>
 <p>
   <i>Becoming Helen Keller</i>
