--- a/me.html
+++ b/me.html
@@ -44,7 +44,6 @@ img {
   <li><a target="_blank" href="Ben Cowper | resume.pdf">resume</a></li>
   <li><a target="_blank" href="https://linkedin.com/in/bencowper">linkedin</a></li>
   <li><a target="_blank" href="https://vimeo.com/bencowper">vimeo</a></li>
-  <li><a href="mailto:cowpervideos@gmail.com">email</a></li>
 </ul>
 
 <div style="margin-left:17%;padding:1px 16px;height:1000px;">
@@ -53,39 +52,35 @@ img {
 <h2>
 Ben Cowper
 </h2>
+<h3>
+cowpervideos@gmail.com
+</h3>
 <hr color="#50A8AF">
 
 <br>
 <p><img src="images/Ben_Cowper.jpg" alt="Ben Cowper" height="350px" width="auto">
-<p>
-I began doing freelance video production in 2007. Since then I have filmed and edited over 100 projects for a wide variety of commercial and independent clients including: Yale University, Hampshire College, Mount Holyoke College, Cambridge University Press, Guilford Art Center, Shoreline Actors Collective, ServiceNet, Northampton Chamber of Commerce, Beehive Sewing, and the Global Fibrosis Foundation.
+I began my work in film production over 10 years ago, and in 2016 received a Bachelor of Arts in Cinematography and Editing from Hampshire College. As a freelance videographer I have filmed and edited over 100 projects for a wide variety of commercial and independent clients including: Yale University, Hampshire College, Mount Holyoke College, PBS American Masters, Cambridge University Press, ServiceNet, Northampton Chamber of Commerce, Beehive Sewing, and the Global Fibrosis Foundation.
 </p>
 <p>
-  I received a Bachelor of Arts in Film and Video Production from Hampshire College in 2016. There I worked on various independent film productions and am proficient in the following areas:
+I am proficient in the following areas of production:
 </p>
 <p>
-  <b>Cinematography</b>
-  Canon 5DmkIII (Magic Lantern), Canon C100, Blackmagic, GoPro, 16mm Bolex, Super 8, Glidecam operator
+  <b>Cinematography:</b>
+  Canon 5DmkIII (Magic Lantern), Canon C100, Blackmagic, GoPro, 16mm Bolex, Super 8, Glidecam
 </p>
 <p>
-  <b>Editing</b>
-  Adobe Premiere, After Effects, Photoshop, Final Cut Pro, DaVinci Resolve
+  <b>Editing:</b>
+  Premiere, After Effects, Photoshop, Final Cut Pro, DaVinci Resolve
 </p>
 <p>
-  <b>Audio</b>
-  Zoom, Tascam, ProTools, Logic, Adobe Audition 5.1 surround and stereo mixing
+  <b>Audio:</b>
+  5.1 surround and stereo recording/mixing: Zoom, Tascam, ProTools, Audition, Logic
 </p>
 <p>
-  <b>Lighting Design</b>
-  Arri, Lowel, ETC film set and live stage experience 
+  <b>Lighting Design:</b>
+  Film set and live theater experience: Arri, Lowel, Kino, ETC
 </p>
-<p>
-  <b>Contact</b>
-  <br>
-  <a href="mailto:cowpervideos@gmail.com">cowpervideos@gmail.com</a>
-  <br>
-  (phone in <a href="http://bencowper.tk/Ben%20Cowper%20|%20resume.pdf">resume</a>)
-</p>
+<br><br>
 
 <hr color="#af5750">
 
@@ -131,11 +126,6 @@ I began doing freelance video production in 2007. Since then I have filmed and e
   <br>
   Camera - Friend's thesis film at Hampshire College
 </p>
-<p>
-  <i>The Great Gatsby</i>
-  <br>
-  Director - Short film screened at Williston-Northampton Film Festival
-</p>
 <br>
 <p>
   <i>Tom Joslin Grant</i>
@@ -146,6 +136,11 @@ I began doing freelance video production in 2007. Since then I have filmed and e
   <i>Green Prize</i>
   <br>
   Recipient for excellence in dramatics at Kingswood Oxford
+</p>
+<p>
+  <i>Williston-Northampton Film Festival</i>
+  <br>
+  Director of a short film screened in 2012
 </p>
 </section>
 
@@ -185,34 +180,22 @@ I began doing freelance video production in 2007. Since then I have filmed and e
 </section>
 
 <section>
-<h3>Web, Graphic Design, Coding</h3>
-  <p>
-    HTML, CSS, Squarespace, Wix, Wordpress, Adobe Illustrator, Photoshop, InDesign, SketchUp, Python, Arduino, Mobile Apps, Apple hardware and software tech
-  </p>
-<a href="/photo.html"><h3>Photography</h3></a>
-  <p>
-  Digital, 35mm, medium format
-  </p>
-<h3>Journalism</h3>
-  <p>
-    Staff writer, photographer, editor for The Climax print and web newspaper (2014 - 2015)
-  </p>
-<h3>Radio Host</h3>
-  <p>
-    Produced two college shows, skilled with production and broadcast equipment (2012 - 2015)
-  </p>
-<h3>80 WPM Typist</h3>
-  <p>
-    Transcription, Microsoft Office, Google Drive, iCloud
-  </p>
-<h3>Preservation and Archiving</h3>
-  <p>
-  Digital transfer and preservation of archaic media formats (film, VHS, magnetic tape, photo negatives)
-  </p>
-<h3>Live Streaming</h3>
-  <p>
-  Installing and live switching video, audio, and slideshows for conferences
-  </p>
+<h3>Web, Graphics, Coding (2012 - )</h3>
+<p>
+  <a target="_blank" href="https://www.becominghelenkeller.org"><i>Becoming Helen Keller</i></a>
+  <br>
+  Web Design and Graphics - Squarespace, CSS, Adobe Photoshop (2017)
+</p>
+<p>
+  <a target="_blank" href="https://www.beehivesewing.com"><i>Beehive Sewing</i></a>
+  <br>
+  Site map and layout - Wordpress (2016)
+</p>
+<p>
+  <i>The Global Fibrosis Foundation</i>
+  <br>
+  Web Design and Graphics - Squarespace, CSS, Adobe Illustrator (2016)
+</p>
 </section>
 <br><br>
 
