--- a/me.html
+++ b/me.html
@@ -59,7 +59,7 @@ cowpervideos@gmail.com
 
 <br>
 <p><img src="images/Ben_Cowper.jpg" alt="Ben Cowper" height="350px" width="auto">
-I began my work in film production over 10 years ago, and in 2016 received a Bachelor of Arts in Cinematography and Editing from Hampshire College. As a freelance videographer I have filmed and edited over 100 projects for a wide variety of commercial and independent clients including: Yale University, Hampshire College, Mount Holyoke College, PBS American Masters, Cambridge University Press, ServiceNet, Northampton Chamber of Commerce, Beehive Sewing, and the Global Fibrosis Foundation.
+I began my work in film production over 10 years ago, and in 2016 received a Bachelor of Arts in Cinematography and Editing from Hampshire College. As a freelance videographer I have filmed and edited over 100 videos for a wide variety of commercial and independent clients including: Yale University, Hampshire College, Mount Holyoke College, PBS American Masters, Cambridge University Press, ServiceNet, Northampton Chamber of Commerce, Beehive Sewing, and the Global Fibrosis Foundation.
 </p>
 <p>
 I am proficient in the following areas of production:
@@ -184,7 +184,7 @@ I am proficient in the following areas of production:
 <p>
   <a target="_blank" href="https://www.becominghelenkeller.org"><i>Becoming Helen Keller</i></a>
   <br>
-  Web Design and Graphics - Squarespace, CSS, Adobe Photoshop (2017)
+  Web Design and Graphics - Squarespace, CSS, Photoshop (2017)
 </p>
 <p>
   <a target="_blank" href="https://www.beehivesewing.com"><i>Beehive Sewing</i></a>
@@ -194,7 +194,7 @@ I am proficient in the following areas of production:
 <p>
   <i>The Global Fibrosis Foundation</i>
   <br>
-  Web Design and Graphics - Squarespace, CSS, Adobe Illustrator (2016)
+  Web Design and Graphics - Squarespace, CSS, Illustrator (2016)
 </p>
 </section>
 <br><br>
