--- a/me.html
+++ b/me.html
@@ -107,7 +107,7 @@ I am proficient in the following areas of production:
   Director of Photography - Channel 101 show screened at UCB Theatre (2 episodes)
 </p>
 <p>
-  <i>The Shanghai String Quartet</i>
+  <a target="_blank" href="http://shanghaiquartetfilm.com"><i>The Shanghai String Quartet</i></a>
   <br>
   Production Assistant - Audio recording for documentary film
 </p>
