--- a/me.html
+++ b/me.html
@@ -66,7 +66,7 @@ I am proficient in the following areas of production:
 </p>
 <p>
   <b>Cinematography:</b>
-  Canon 5DmkIII (Magic Lantern), Canon C100, Blackmagic, GoPro, 16mm Bolex, Super 8, Glidecam
+  Canon 5DmkIII (Magic Lantern), Canon C100, Blackmagic, GoPro, 16mm Bolex, Super 8, Glidecam, Still photography (Digital, 35mm, medium and large format)
 </p>
 <p>
   <b>Editing:</b>
