--- a/me.html
+++ b/me.html
@@ -164,7 +164,7 @@ I am proficient in the following areas of production:
 <p>
   <i>Video Production Collective</i>
   <br>
-  Co-Instructor - Designed and taught a film course at Hampshire College for 12 students (Spring 2014)
+  Instructor - Designed and taught a film course at Hampshire College for 12 students (Spring 2014)
 </p>
 <p>
   <i>Advanced Digital Video</i>
