--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
   <li><a class="active" href="index.html">film - personal</a></li>
   <li><a href="professional.html">film - professional</a></li>
   <li><a href="reel.html">reel</a></li>
+  <li><a href="tvstudio.html">tv studio renovation</a></li>
   <li><a href="photo.html">photography</a></li>
   <li><a target="_blank" href="Ben Cowper | resume.pdf">resume</a></li>
   <li><a target="_blank" href="https://linkedin.com/in/bencowper">linkedin</a></li>
