--- a/reel.html
+++ b/reel.html
@@ -33,6 +33,7 @@
   <li><a href="index.html">film - personal</a></li>
   <li><a href="professional.html">film - professional</a></li>
   <li><a class="active" href="reel.html">reel</a></li>
+  <li><a href="tvstudio.html">tv studio renovation</a></li>
   <li><a href="photo.html">photography</a></li>
   <li><a target="_blank" href="Ben Cowper | resume.pdf">resume</a></li>
   <li><a target="_blank" href="https://linkedin.com/in/bencowper">linkedin</a></li>
